--- a/react-facts/src/index.css
+++ b/react-facts/src/index.css
@@ -2,4 +2,9 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Inter',sans-serif;
+}
+
+body{
+    background-color: rgba(22, 28, 32, 0.83);
 }
