--- a/react-facts/src/components/Header/Header.css
+++ b/react-facts/src/components/Header/Header.css
@@ -1,25 +1,89 @@
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #201e1e;
-    padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ffffff;
+  padding: 30px 25px;
+  height: 60px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  z-index: 1;
 }
 
-.title > img {
-    width: 50px;
-    margin-right:0.5rem;
+.logo {
+  display: flex;
+  margin-right: 0.5rem;
+  align-items: center;
 }
 
-.title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #61dafb;
-    font-weight: 900;
+.logo > img {
+  width: 50px;
 }
 
-nav > h3{
-    color: #dbd7d7;
+.toggler {
+  color: #dbd7d7;
+  display: flex;
 }
 
+.toggler-light {
+  margin-right: 10px;
+}
+
+.toggler-slider {
+  background-color: #2b283a;
+  height: 20px;
+  width: 45px;
+  border-radius: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  cursor: pointer;
+}
+
+.toggler-circle {
+  height: 20px;
+  width: 20px;
+  margin-left: 2px;
+  /* margin-left:22px; */
+  background-color: white;
+  border-radius: 50%;
+}
+
+nav.dark {
+  background-color: black;
+}
+
+nav.dark .toggler-slider {
+  justify-content: flex-end;
+}
+
+.toggler-dark {
+  margin-left: 10px;
+}
+
+nav.dark .toggler-dark {
+  font-weight: 900;
+  color: white;
+}
+
+nav.dark .toggler-light {
+  font-weight: normal;
+  color: white;
+}
+
+.toggler-light {
+  font-weight: 900;
+  color: black;
+}
+
+nav.dark .logo > h1 {
+  color: white;
+}
+
+nav.dark .toggler-slider {
+  background-color: white;
+}
+
+nav.dark .toggler-circle {
+  background-color: black;
+  margin-right: 1px;
+  width: 20px;
+}
